cmake_minimum_required(VERSION 3.27)
project(Semester3)

set(CMAKE_CXX_STANDARD 14)

add_executable(Semester3
#        dinamis_struct_biodata.cpp
#        StackArray.cpp
#        Data_antrian_Mahasiswa.cpp
#        Binary_tree.cpp)
        final_ASD.cpp

add_executable(
        StackArray.cpp
        StackArray.cpp
)
